[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pinion-queue"
version = "0.2.7"
description = "Pinion: a tiny pluggable job queue with retries."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "Nouman Ejaz", email = "working.nouman.ejaz@gmail.com" }]
keywords = ["job queue", "worker", "retry", "sqlite", "task registry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]

docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]

tests = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/Nouman64-cat/Pinion"
Issues = "https://github.com/Nouman64-cat/Pinion/issues"

[project.scripts]
pinion = "pinion.cli:main"
pinion-queue = "pinion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pinion"]
force-include = { "pinion/py.typed" = "pinion/py.typed" }

[tool.hatch.build.targets.sdist]
include = [
  "pinion",
  "README.md",
  "pyproject.toml",
  "LICENSE",
]
